Added ability to get movie by id
